// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddGame component Inputs updates correctly 1`] = `
<Container>
  <Card
    title="Legg til ett spill"
  >
    <FormContainer>
      <FormGroup>
        <FormLabel>
          Tittel:
        </FormLabel>
        <FormInput
          id="titleInput"
          onChange={[Function]}
          placeholder="Skriv inn tittel"
          type="text"
          value=""
        />
      </FormGroup>
      <FormGroup>
        <FormLabel>
          Beskrivelse:
        </FormLabel>
        <FormTextarea
          cols={10}
          id="descriptionInput"
          onChange={[Function]}
          placeholder="Skriv inn en beskrivelse av spillet"
          rows={10}
          value=""
        />
      </FormGroup>
    </FormContainer>
    <Linebreak />
    <Row>
      <Column
        width={2}
      >
        <FormLabel>
          Sjanger:
        </FormLabel>
      </Column>
      <Column>
        <Row
          key="0"
        >
          <Column>
            <FormSelect
              id="genreSel"
              key="0"
              onChange={[Function]}
            >
              <option
                hidden={true}
              >
                Velg sjanger her:
              </option>
              <option
                key="0"
                value={1}
              >
                test
              </option>
              <option
                key="1"
                value={2}
              >
                test2
              </option>
            </FormSelect>
          </Column>
        </Row>
        <Linebreak />
      </Column>
    </Row>
    <Row>
      <Column>
        <ButtonSuccess
          onClick={[Function]}
        >
          Legg til flere sjangere (
          2
          )
        </ButtonSuccess>
      </Column>
      <Column />
    </Row>
    <Linebreak />
    <Row>
      <Column
        width={2}
      >
        <FormLabel>
          Platform:
        </FormLabel>
      </Column>
      <Column>
        <Row
          key="0"
        >
          <Column>
            <FormSelect
              id="platformSel"
              key="0"
              onChange={[Function]}
            >
              <option
                hidden={true}
              >
                Velg platform her:
              </option>
              <option
                key="0"
                value={1}
              >
                test
              </option>
              <option
                key="1"
                value={2}
              >
                test2
              </option>
            </FormSelect>
          </Column>
        </Row>
        <Linebreak />
      </Column>
    </Row>
    <Row>
      <Column>
        <ButtonSuccess
          onClick={[Function]}
        >
          Legg til flere platformer (
          3
          )
        </ButtonSuccess>
      </Column>
      <Column />
    </Row>
  </Card>
  <Card
    title=""
  >
    <Row>
      <Column>
        <ButtonDanger
          onClick={[Function]}
        >
          Avbryt
        </ButtonDanger>
      </Column>
      <Column>
        <ButtonSuccess
          onClick={[Function]}
        >
          Lagre
        </ButtonSuccess>
      </Column>
    </Row>
  </Card>
</Container>
`;

exports[`GameCard component GameCard default 1`] = `
<Fragment>
  <Container>
    <Card
      key="0"
      title=""
    >
      <h6
        className="card-subtitle mb-2 text-muted"
      >
        <ColumnCentre>
          Terningkast:
           
           Ikke tilgjengelig
        </ColumnCentre>
      </h6>
      <Row>
        <ColumnCentre
          key="1"
          mdwidth={2}
          width={12}
        >
          <ThumbNail
            img="https://cdn-icons-png.flaticon.com/512/686/686589.png"
          />
        </ColumnCentre>
        <ColumnCentre
          mdwidth={10}
          width={12}
        >
          <Linebreak />
        </ColumnCentre>
      </Row>
      <Linebreak />
      <Row>
        <ColumnCentre>
          Sjanger:
           
        </ColumnCentre>
      </Row>
      <Row>
        <ColumnCentre>
          Plattformer:
           
        </ColumnCentre>
      </Row>
      <Row />
      <Row />
      <Row />
    </Card>
    <Linebreak />
    <Row>
      <Column>
        <ButtonDanger
          onClick={[Function]}
        >
          Tilbake til søk
        </ButtonDanger>
      </Column>
      <Column
        right={true}
      >
        <ButtonSuccess
          onClick={[Function]}
        >
          Anmeld dette spillet
        </ButtonSuccess>
      </Column>
    </Row>
  </Container>
  <Container>
    <Card
      title="Anmeldelser for dette spillet:"
    >
      Det finnes for øyeblikket ingen anmeldelser for dette spillet. 
    </Card>
  </Container>
</Fragment>
`;

exports[`GameCard component GameCard on DB game 1`] = `
<Fragment>
  <Container>
    <Card
      key="0"
      title=""
    >
      <h6
        className="card-subtitle mb-2 text-muted"
      >
        <ColumnCentre>
          Terningkast:
           
           Ikke tilgjengelig
        </ColumnCentre>
      </h6>
      <Row>
        <ColumnCentre
          key="1"
          mdwidth={2}
          width={12}
        >
          <ThumbNail
            img="https://cdn-icons-png.flaticon.com/512/686/686589.png"
          />
        </ColumnCentre>
        <ColumnCentre
          mdwidth={10}
          width={12}
        >
          <Linebreak />
        </ColumnCentre>
      </Row>
      <Linebreak />
      <Row>
        <ColumnCentre>
          Sjanger:
           
        </ColumnCentre>
      </Row>
      <Row>
        <ColumnCentre>
          Plattformer:
           
        </ColumnCentre>
      </Row>
      <Row />
      <Row />
      <Row />
    </Card>
    <Linebreak />
    <Row>
      <Column>
        <ButtonDanger
          onClick={[Function]}
        >
          Tilbake til søk
        </ButtonDanger>
      </Column>
      <Column
        right={true}
      >
        <ButtonSuccess
          onClick={[Function]}
        >
          Anmeld dette spillet
        </ButtonSuccess>
      </Column>
    </Row>
  </Container>
  <Container>
    <Card
      title="Anmeldelser for dette spillet:"
    />
  </Container>
</Fragment>
`;

exports[`GameCard component GameCard on IGDB game 1`] = `
<Fragment>
  <Container>
    <Card
      key="0"
      title=""
    >
      <h6
        className="card-subtitle mb-2 text-muted"
      >
        <ColumnCentre>
          Terningkast:
           
           Ikke tilgjengelig
        </ColumnCentre>
      </h6>
      <Row>
        <ColumnCentre
          key="1"
          mdwidth={2}
          width={12}
        >
          <ThumbNail
            img="https://cdn-icons-png.flaticon.com/512/686/686589.png"
          />
        </ColumnCentre>
        <ColumnCentre
          mdwidth={10}
          width={12}
        >
          <Linebreak />
        </ColumnCentre>
      </Row>
      <Linebreak />
      <Row>
        <ColumnCentre>
          Sjanger:
           
        </ColumnCentre>
      </Row>
      <Row>
        <ColumnCentre>
          Plattformer:
           
        </ColumnCentre>
      </Row>
      <Row />
      <Row />
      <Row />
    </Card>
    <Linebreak />
    <Row>
      <Column>
        <ButtonDanger
          onClick={[Function]}
        >
          Tilbake til søk
        </ButtonDanger>
      </Column>
      <Column
        right={true}
      >
        <ButtonSuccess
          onClick={[Function]}
        >
          Anmeld dette spillet
        </ButtonSuccess>
      </Column>
    </Row>
  </Container>
  <Container>
    <Card
      title="Anmeldelser for dette spillet:"
    >
      Det finnes for øyeblikket ingen anmeldelser for dette spillet. 
    </Card>
  </Container>
</Fragment>
`;
